<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/systolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/systolic"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/diastolic"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/diastolic"
        android:inputType="textPersonName" />

    <Spinner
        android:id="@+id/familyMember"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        tools:listitem="@layout/support_simple_spinner_dropdown_item"
        android:entries="@array/familyMember"/>

    <Button
        android:id="@+id/addBloodPressure"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnAddBP" />

    <Button
        android:id="@+id/report"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Report" />

    <ListView
        android:id="@+id/lvBPs"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


</LinearLayout>